Update benchmark runner

--- a/benchmark_cpu_gpu.ipynb
+++ b/benchmark_cpu_gpu.ipynb
@@ -22,7 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install slsqp-jax from GitHub\n",
+    "# Upgrade JAX + CUDA plugin to a compatible set, then install slsqp-jax.\n",
+    "# Colab ships an older jax-cuda12-plugin that is incompatible with jax>=0.9.\n",
+    "!pip install -U \"jax[cuda12]\" -q\n",
     "!pip install \"slsqp-jax @ git+https://github.com/lucianopaz/slsqp-jax.git\" -q"
    ]
   },
@@ -70,18 +72,21 @@
     "For each problem dimension **n**, we create a constrained weighted quadratic:\n",
     "\n",
     "$$\n",
-    "\\min_x \\sum_{i=1}^n w_i\\,(x_i - 1)^2\n",
+    "\\min_x \\sum_{i=1}^n w_i\\,(x_i - t_i)^2\n",
     "\\quad\\text{s.t.}\\quad\n",
-    "\\sum_i x_i = n,\\;\\; x_i \\ge 0\n",
+    "\\sum_i x_i = n,\\;\\; x_j \\ge 0 \\;\\text{for}\\; j=0,\\dots,3\n",
     "$$\n",
     "\n",
-    "where $w_i$ are linearly spaced in $[1,\\,10]$. The analytical solution is\n",
-    "$x^* = (1,\\dots,1)$.\n",
+    "where $w_i$ are linearly spaced in $[1,\\,10]$, and the target $t_i = -2$ for the first 4 variables and $t_i = 1$ for the rest. The 4 box constraints are **active** at the solution (the solver wants $x_{0..3} = -2$ but is prevented), while only 5 total constraints keep the QP subproblem's $AA^T$ system at a\n",
+    "numerically stable $5 \\times 5$.\n",
     "\n",
     "Each benchmark:\n",
     "1. JIT-compiles the full `optimistix.minimise` call (all SLSQP iterations compiled into a single XLA program).\n",
     "2. Runs a **warmup** pass to trigger compilation.\n",
-    "3. Times multiple post-compilation runs and reports the average."
+    "3. Times multiple post-compilation runs and reports the average.\n",
+    "\n",
+    "> **Note on GPU vs CPU for iterative solvers** — SLSQP uses `jax.lax.while_loop` for the outer iteration and the active-set QP subproblem. Each loop iteration incurs GPU kernel-launch and host-device synchronisation overhead. For small to moderate **n** the per-step linear algebra (O(kn) L-BFGS HVPs, O(mn) projections)\n",
+    "> is too cheap to offset that overhead, so **CPU is expected to be faster** at these sizes. The GPU advantage appears for large **n** (thousands of variables) where the vectorised operations dominate — as demonstrated in the 10K portfolio problem at the end of this notebook."
    ]
   },
   {
@@ -90,21 +95,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "N_INEQ = 4  # fixed number of box constraints (independent of n)\n",
+    "\n",
+    "\n",
     "def make_benchmark_problem(n):\n",
-    "    \"\"\"Create a constrained quadratic optimisation problem of dimension n.\n",
+    "    \"\"\"Create a constrained quadratic with 1 equality + 4 inequality constraints.\n",
+    "\n",
+    "    The first 4 variables target -2 (but are constrained >= 0), so the\n",
+    "    inequality constraints are active at the solution.  The remaining\n",
+    "    n-4 variables target 1 and are unconstrained from below.\n",
     "\n",
     "    Returns (solver, objective, x0).\n",
     "    \"\"\"\n",
     "    weights = jnp.linspace(1.0, 10.0, n)\n",
+    "    target = jnp.ones(n).at[: min(N_INEQ, n)].set(-2.0)\n",
     "\n",
     "    def objective(x, args):\n",
-    "        return jnp.sum(weights * (x - 1.0) ** 2), None\n",
+    "        return jnp.sum(weights * (x - target) ** 2), None\n",
     "\n",
     "    def eq_constraint(x, args):\n",
     "        return jnp.array([jnp.sum(x) - float(n)])\n",
     "\n",
+    "    n_ineq = min(N_INEQ, n)\n",
+    "\n",
     "    def ineq_constraint(x, args):\n",
-    "        return x  # x_i >= 0\n",
+    "        return x[:n_ineq]  # x[0], ..., x[n_ineq-1] >= 0\n",
     "\n",
     "    solver = SLSQP(\n",
     "        rtol=1e-6,\n",
@@ -113,11 +128,11 @@
     "        eq_constraint_fn=eq_constraint,\n",
     "        n_eq_constraints=1,\n",
     "        ineq_constraint_fn=ineq_constraint,\n",
-    "        n_ineq_constraints=n,\n",
+    "        n_ineq_constraints=n_ineq,\n",
     "        lbfgs_memory=10,\n",
     "    )\n",
     "\n",
-    "    x0 = jnp.full(n, 2.0)\n",
+    "    x0 = jnp.ones(n)  # feasible: sum = n, x[:4] = 1 >= 0\n",
     "    return solver, objective, x0\n",
     "\n",
     "\n",
@@ -204,9 +219,14 @@
     "        speedup = cpu_avg / gpu_avg\n",
     "        print(f\"  Speedup: {speedup:.2f}x\")\n",
     "\n",
-    "    # Quick sanity check — solution should be all-ones\n",
-    "    err = float(jnp.max(jnp.abs(cpu_sol - 1.0)))\n",
-    "    print(f\"  Solution check: max|x* - 1| = {err:.2e}\")\n",
+    "    # Sanity checks — finite, constraints satisfied\n",
+    "    is_finite = bool(jnp.all(jnp.isfinite(jnp.asarray(cpu_sol))))\n",
+    "    eq_viol = float(jnp.abs(jnp.sum(jnp.asarray(cpu_sol)) - float(n)))\n",
+    "    ineq_min = float(jnp.min(jnp.asarray(cpu_sol[: min(N_INEQ, n)])))\n",
+    "    print(\n",
+    "        f\"  Solution check: finite={is_finite}, \"\n",
+    "        f\"|sum(x)-n|={eq_viol:.2e}, min(x[:4])={ineq_min:.2e}\"\n",
+    "    )\n",
     "\n",
     "    all_results[n] = entry"
    ]
