Use uv in benchmark installation

--- a/benchmark_cpu_gpu.ipynb
+++ b/benchmark_cpu_gpu.ipynb
@@ -24,8 +24,7 @@
    "source": [
     "# Upgrade JAX + CUDA plugin to a compatible set, then install slsqp-jax.\n",
     "# Colab ships an older jax-cuda12-plugin that is incompatible with jax>=0.9.\n",
-    "!pip install -U \"jax[cuda12]\" -q\n",
-    "!pip install \"slsqp-jax @ git+https://github.com/lucianopaz/slsqp-jax.git\" -q"
+    "!uv pip install jax[cuda12] git+https://github.com/lucianopaz/slsqp-jax.git -q"
    ]
   },
   {
