Try to improve stability of solver

--- a/benchmark_cpu_gpu.ipynb
+++ b/benchmark_cpu_gpu.ipynb
@@ -94,6 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.optimize import minimize as scipy_minimize\n",
+    "\n",
     "N_INEQ = 4  # fixed number of box constraints (independent of n)\n",
     "\n",
     "\n",
@@ -104,10 +106,14 @@
     "    inequality constraints are active at the solution.  The remaining\n",
     "    n-4 variables target 1 and are unconstrained from below.\n",
     "\n",
-    "    Returns (solver, objective, x0).\n",
+    "    Returns (solver, objective, x0, scipy_problem_dict).\n",
     "    \"\"\"\n",
     "    weights = jnp.linspace(1.0, 10.0, n)\n",
     "    target = jnp.ones(n).at[: min(N_INEQ, n)].set(-2.0)\n",
+    "\n",
+    "    # Convert to numpy for scipy compatibility\n",
+    "    weights_np = np.asarray(weights)\n",
+    "    target_np = np.asarray(target)\n",
     "\n",
     "    def objective(x, args):\n",
     "        return jnp.sum(weights * (x - target) ** 2), None\n",
@@ -131,8 +137,63 @@
     "        lbfgs_memory=10,\n",
     "    )\n",
     "\n",
+    "    # SciPy problem definition (for comparison)\n",
+    "    def scipy_objective(x):\n",
+    "        return np.sum(weights_np * (x - target_np) ** 2)\n",
+    "\n",
+    "    def scipy_eq_constraint(x):\n",
+    "        return np.sum(x) - float(n)\n",
+    "\n",
+    "    scipy_constraints = [\n",
+    "        {\"type\": \"eq\", \"fun\": scipy_eq_constraint},\n",
+    "    ]\n",
+    "    # Add inequality constraints: x[i] >= 0 for i in range(n_ineq)\n",
+    "    for i in range(n_ineq):\n",
+    "        scipy_constraints.append({\"type\": \"ineq\", \"fun\": lambda x, i=i: x[i]})\n",
+    "\n",
+    "    scipy_problem = {\n",
+    "        \"fun\": scipy_objective,\n",
+    "        \"constraints\": scipy_constraints,\n",
+    "    }\n",
+    "\n",
     "    x0 = jnp.ones(n)  # feasible: sum = n, x[:4] = 1 >= 0\n",
-    "    return solver, objective, x0\n",
+    "    return solver, objective, x0, scipy_problem\n",
+    "\n",
+    "\n",
+    "def solve_with_scipy(scipy_problem, x0_np):\n",
+    "    \"\"\"Solve the problem using scipy.optimize.minimize with SLSQP.\n",
+    "\n",
+    "    Returns (solution, time_seconds, success).\n",
+    "    \"\"\"\n",
+    "    t0 = time.perf_counter()\n",
+    "    result = scipy_minimize(\n",
+    "        scipy_problem[\"fun\"],\n",
+    "        x0_np,\n",
+    "        method=\"SLSQP\",\n",
+    "        constraints=scipy_problem[\"constraints\"],\n",
+    "        options={\"ftol\": 1e-9, \"maxiter\": 200},\n",
+    "    )\n",
+    "    elapsed = time.perf_counter() - t0\n",
+    "    return result.x, elapsed, result.success\n",
+    "\n",
+    "\n",
+    "def check_solutions_match(sol_jax, sol_scipy, rtol=1e-4, atol=1e-5):\n",
+    "    \"\"\"Check if JAX and SciPy solutions match within tolerance.\n",
+    "\n",
+    "    Returns (match, max_diff).\n",
+    "    \"\"\"\n",
+    "    sol_jax_np = np.asarray(sol_jax)\n",
+    "    sol_scipy_np = np.asarray(sol_scipy)\n",
+    "\n",
+    "    # Handle NaN in JAX solution\n",
+    "    if np.any(np.isnan(sol_jax_np)):\n",
+    "        return False, np.inf\n",
+    "\n",
+    "    diff = np.abs(sol_jax_np - sol_scipy_np)\n",
+    "    max_diff = float(np.max(diff))\n",
+    "    match = np.allclose(sol_jax_np, sol_scipy_np, rtol=rtol, atol=atol)\n",
+    "\n",
+    "    return match, max_diff\n",
     "\n",
     "\n",
     "def benchmark_on_device(solve_fn, x0, device, n_loops=10):\n",
@@ -170,11 +231,11 @@
     "all_results = {}\n",
     "\n",
     "for n in problem_sizes:\n",
-    "    print(f\"\\n{'=' * 55}\")\n",
+    "    print(f\"\\n{'=' * 65}\")\n",
     "    print(f\" Problem dimension  n = {n}\")\n",
-    "    print(f\"{'=' * 55}\")\n",
+    "    print(f\"{'=' * 65}\")\n",
     "\n",
-    "    solver, objective, x0 = make_benchmark_problem(n)\n",
+    "    solver, objective, x0, scipy_problem = make_benchmark_problem(n)\n",
     "\n",
     "    # Build a single JIT-compiled function for this problem.\n",
     "    # Passing solver/objective via default-arg capture so each\n",
@@ -193,6 +254,13 @@
     "\n",
     "    entry = {}\n",
     "\n",
+    "    # --- SciPy reference ---\n",
+    "    print(\"  Running SciPy SLSQP ...\", end=\" \", flush=True)\n",
+    "    x0_np = np.asarray(x0)\n",
+    "    scipy_sol, scipy_time, scipy_success = solve_with_scipy(scipy_problem, x0_np)\n",
+    "    print(f\"done  →  {scipy_time * 1000:8.2f} ms (success={scipy_success})\")\n",
+    "    entry[\"scipy\"] = {\"time\": scipy_time, \"sol\": scipy_sol, \"success\": scipy_success}\n",
+    "\n",
     "    # --- CPU ---\n",
     "    print(\"  Compiling for CPU ...\", end=\" \", flush=True)\n",
     "    cpu_avg, cpu_std, cpu_sol = benchmark_on_device(\n",
@@ -201,8 +269,13 @@
     "        cpu_device,\n",
     "        n_loops,\n",
     "    )\n",
-    "    print(f\"done  \\u2192  {cpu_avg * 1000:8.2f} \\u00b1 {cpu_std * 1000:.2f} ms\")\n",
+    "    print(f\"done  →  {cpu_avg * 1000:8.2f} ± {cpu_std * 1000:.2f} ms\")\n",
     "    entry[\"cpu\"] = {\"avg\": cpu_avg, \"std\": cpu_std, \"sol\": cpu_sol}\n",
+    "\n",
+    "    # Check CPU vs SciPy match\n",
+    "    cpu_match, cpu_max_diff = check_solutions_match(cpu_sol, scipy_sol)\n",
+    "    entry[\"cpu\"][\"match_scipy\"] = cpu_match\n",
+    "    entry[\"cpu\"][\"max_diff\"] = cpu_max_diff\n",
     "\n",
     "    # --- GPU ---\n",
     "    if gpu_available:\n",
@@ -213,19 +286,43 @@
     "            gpu_device,\n",
     "            n_loops,\n",
     "        )\n",
-    "        print(f\"done  \\u2192  {gpu_avg * 1000:8.2f} \\u00b1 {gpu_std * 1000:.2f} ms\")\n",
+    "        print(f\"done  →  {gpu_avg * 1000:8.2f} ± {gpu_std * 1000:.2f} ms\")\n",
     "        entry[\"gpu\"] = {\"avg\": gpu_avg, \"std\": gpu_std, \"sol\": gpu_sol}\n",
     "        speedup = cpu_avg / gpu_avg\n",
     "        print(f\"  Speedup: {speedup:.2f}x\")\n",
     "\n",
+    "        # Check GPU vs SciPy match\n",
+    "        gpu_match, gpu_max_diff = check_solutions_match(gpu_sol, scipy_sol)\n",
+    "        entry[\"gpu\"][\"match_scipy\"] = gpu_match\n",
+    "        entry[\"gpu\"][\"max_diff\"] = gpu_max_diff\n",
+    "\n",
     "    # Sanity checks — finite, constraints satisfied\n",
+    "    print(\"\\n  Solution validation:\")\n",
+    "\n",
+    "    # SciPy solution check\n",
+    "    scipy_eq_viol = float(np.abs(np.sum(scipy_sol) - float(n)))\n",
+    "    scipy_ineq_min = float(np.min(scipy_sol[: min(N_INEQ, n)]))\n",
+    "    print(f\"    SciPy: |sum(x)-n|={scipy_eq_viol:.2e}, min(x[:4])={scipy_ineq_min:.2e}\")\n",
+    "\n",
+    "    # CPU solution check\n",
     "    is_finite = bool(jnp.all(jnp.isfinite(jnp.asarray(cpu_sol))))\n",
     "    eq_viol = float(jnp.abs(jnp.sum(jnp.asarray(cpu_sol)) - float(n)))\n",
     "    ineq_min = float(jnp.min(jnp.asarray(cpu_sol[: min(N_INEQ, n)])))\n",
+    "    match_str = \"✓\" if cpu_match else f\"✗ (max_diff={cpu_max_diff:.2e})\"\n",
     "    print(\n",
-    "        f\"  Solution check: finite={is_finite}, \"\n",
-    "        f\"|sum(x)-n|={eq_viol:.2e}, min(x[:4])={ineq_min:.2e}\"\n",
+    "        f\"    CPU:   finite={is_finite}, |sum(x)-n|={eq_viol:.2e}, \"\n",
+    "        f\"min(x[:4])={ineq_min:.2e}, match_scipy={match_str}\"\n",
     "    )\n",
+    "\n",
+    "    if gpu_available:\n",
+    "        is_finite = bool(jnp.all(jnp.isfinite(jnp.asarray(gpu_sol))))\n",
+    "        eq_viol = float(jnp.abs(jnp.sum(jnp.asarray(gpu_sol)) - float(n)))\n",
+    "        ineq_min = float(jnp.min(jnp.asarray(gpu_sol[: min(N_INEQ, n)])))\n",
+    "        match_str = \"✓\" if gpu_match else f\"✗ (max_diff={gpu_max_diff:.2e})\"\n",
+    "        print(\n",
+    "            f\"    GPU:   finite={is_finite}, |sum(x)-n|={eq_viol:.2e}, \"\n",
+    "            f\"min(x[:4])={ineq_min:.2e}, match_scipy={match_str}\"\n",
+    "        )\n",
     "\n",
     "    all_results[n] = entry"
    ]
@@ -238,20 +335,29 @@
    "source": [
     "# ---- Summary table ---------------------------------------------------------\n",
     "print()\n",
-    "header = f\"{'n':>6} | {'CPU (ms)':>14} | {'GPU (ms)':>14} | {'Speedup':>10}\"\n",
+    "print(\"=\" * 90)\n",
+    "print(\" BENCHMARK SUMMARY\")\n",
+    "print(\"=\" * 90)\n",
+    "header = f\"{'n':>6} | {'SciPy (ms)':>12} | {'CPU (ms)':>14} | {'GPU (ms)':>14} | {'Speedup':>10} | {'Match':>6}\"\n",
     "print(header)\n",
     "print(\"-\" * len(header))\n",
     "\n",
     "for n in problem_sizes:\n",
+    "    scipy_ms = all_results[n][\"scipy\"][\"time\"] * 1000\n",
     "    cpu_ms = all_results[n][\"cpu\"][\"avg\"] * 1000\n",
-    "    row = f\"{n:>6} | {cpu_ms:>10.2f} ms\"\n",
+    "    cpu_match = \"✓\" if all_results[n][\"cpu\"][\"match_scipy\"] else \"✗\"\n",
+    "    row = f\"{n:>6} | {scipy_ms:>10.2f} | {cpu_ms:>10.2f} ms\"\n",
     "    if gpu_available and \"gpu\" in all_results[n]:\n",
     "        gpu_ms = all_results[n][\"gpu\"][\"avg\"] * 1000\n",
     "        sp = all_results[n][\"cpu\"][\"avg\"] / all_results[n][\"gpu\"][\"avg\"]\n",
-    "        row += f\" | {gpu_ms:>10.2f} ms | {sp:>8.2f}x\"\n",
+    "        gpu_match = \"✓\" if all_results[n][\"gpu\"][\"match_scipy\"] else \"✗\"\n",
+    "        row += f\" | {gpu_ms:>10.2f} ms | {sp:>8.2f}x | {cpu_match}/{gpu_match}\"\n",
     "    else:\n",
-    "        row += f\" | {'N/A':>14} | {'N/A':>10}\"\n",
-    "    print(row)"
+    "        row += f\" | {'N/A':>14} | {'N/A':>10} | {cpu_match}\"\n",
+    "    print(row)\n",
+    "\n",
+    "print()\n",
+    "print(\"Match column: CPU/GPU vs SciPy reference solution (✓ = match, ✗ = mismatch)\")"
    ]
   },
   {
