Fix hessian bad conditioning the led to NaN

--- a/benchmark_cpu_gpu.ipynb
+++ b/benchmark_cpu_gpu.ipynb
@@ -85,7 +85,7 @@
     "3. Times multiple post-compilation runs and reports the average.\n",
     "\n",
     "> **Note on GPU vs CPU for iterative solvers** — SLSQP uses `jax.lax.while_loop` for the outer iteration and the active-set QP subproblem. Each loop iteration incurs GPU kernel-launch and host-device synchronisation overhead. For small to moderate **n** the per-step linear algebra (O(kn) L-BFGS HVPs, O(mn) projections)\n",
-    "> is too cheap to offset that overhead, so **CPU is expected to be faster** at these sizes. The GPU advantage appears for large **n** (thousands of variables) where the vectorised operations dominate — as demonstrated in the 10K portfolio problem at the end of this notebook."
+    "> is too cheap to offset that overhead, so **CPU is expected to be faster** at these sizes. The GPU advantage appears for large **n** (thousands of variables) where the vectorised operations dominate — as demonstrated in the 100k portfolio problem at the end of this notebook."
    ]
   },
   {
@@ -483,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_LARGE = 10_000\n",
+    "N_LARGE = 100_000\n",
     "K_SECTORS = 20\n",
     "SECTOR_CAP = 0.15  # max 15 % in any one sector\n",
     "\n",
@@ -517,7 +517,7 @@
     "    return SECTOR_CAP - sector_allocs\n",
     "\n",
     "\n",
-    "solver_10k = SLSQP(\n",
+    "solver_100k = SLSQP(\n",
     "    rtol=1e-5,\n",
     "    atol=1e-5,\n",
     "    max_steps=500,\n",
@@ -531,7 +531,7 @@
     ")\n",
     "\n",
     "# Equal-weight starting point (feasible: each sector gets ~5 %)\n",
-    "x0_10k = jnp.ones(N_LARGE) / N_LARGE\n",
+    "x0_100k = jnp.ones(N_LARGE) / N_LARGE\n",
     "\n",
     "print(\"Problem setup\")\n",
     "print(f\"  Decision variables      : {N_LARGE:,}\")\n",
@@ -545,10 +545,10 @@
     "\n",
     "\n",
     "@jax.jit\n",
-    "def solve_10k(x0):\n",
+    "def solve_100k(x0):\n",
     "    sol = optx.minimise(\n",
     "        portfolio_objective,\n",
-    "        solver_10k,\n",
+    "        solver_100k,\n",
     "        x0,\n",
     "        has_aux=True,\n",
     "        max_steps=500,\n",
@@ -557,31 +557,29 @@
     "    return sol.value\n",
     "\n",
     "\n",
-    "x0_dev = jax.device_put(x0_10k, target_device)\n",
+    "x0_dev = jax.device_put(x0_100k, target_device)\n",
     "\n",
     "# Compile\n",
     "print(\"\\nCompiling (this may take a minute or two) ...\")\n",
     "t0 = time.perf_counter()\n",
-    "result_10k = solve_10k(x0_dev)\n",
-    "result_10k.block_until_ready()\n",
+    "result_100k = solve_100k(x0_dev)\n",
+    "result_100k.block_until_ready()\n",
     "compile_time = time.perf_counter() - t0\n",
     "print(f\"Compilation time: {compile_time:.1f} s\")\n",
     "\n",
     "# Timed runs\n",
     "n_runs = 5\n",
     "print(f\"\\nRunning {n_runs} timed solves ...\")\n",
-    "times_10k = []\n",
+    "times_100k = []\n",
     "for _ in range(n_runs):\n",
     "    t0 = time.perf_counter()\n",
-    "    result_10k = solve_10k(x0_dev)\n",
-    "    result_10k.block_until_ready()\n",
-    "    times_10k.append(time.perf_counter() - t0)\n",
+    "    result_100k = solve_100k(x0_dev)\n",
+    "    result_100k.block_until_ready()\n",
+    "    times_100k.append(time.perf_counter() - t0)\n",
     "\n",
-    "avg_10k = np.mean(times_10k)\n",
-    "std_10k = np.std(times_10k)\n",
-    "print(\n",
-    "    f\"Average solve time ({device_name}): {avg_10k * 1000:.2f} \\u00b1 {std_10k * 1000:.2f} ms\"\n",
-    ")"
+    "avg_100k = np.mean(times_100k)\n",
+    "std_100k = np.std(times_100k)\n",
+    "print(f\"Average solve time ({device_name}): {avg_100k:.2f} \\u00b1 {std_100k:.2f} s\")"
    ]
   },
   {
@@ -591,12 +589,12 @@
    "outputs": [],
    "source": [
     "# ---- Analyse the 10 K solution ---------------------------------------------\n",
-    "x_opt = np.asarray(result_10k)\n",
+    "x_opt = np.asarray(result_100k)\n",
     "\n",
-    "obj_val = float(portfolio_objective(result_10k, None)[0])\n",
-    "budget_viol = float(jnp.abs(jnp.sum(result_10k) - 1.0))\n",
+    "obj_val = float(portfolio_objective(result_100k, None)[0])\n",
+    "budget_viol = float(jnp.abs(jnp.sum(result_100k) - 1.0))\n",
     "sector_allocs = np.asarray(\n",
-    "    jnp.zeros(K_SECTORS).at[np.asarray(sector_ids)].add(result_10k)\n",
+    "    jnp.zeros(K_SECTORS).at[np.asarray(sector_ids)].add(result_100k)\n",
     ")\n",
     "max_sector_viol = float(np.max(np.maximum(sector_allocs - SECTOR_CAP, 0.0)))\n",
     "n_active = int(np.sum(x_opt > 1e-6))\n",
@@ -608,12 +606,12 @@
     "print(f\"  Budget violation |sum-1|   : {budget_viol:.2e}\")\n",
     "print(f\"  Max sector-cap violation   : {max_sector_viol:.2e}\")\n",
     "print(f\"  Non-zero allocations       : {n_active:,} / {N_LARGE:,}\")\n",
-    "print(f\"  Total portfolio weight     : {float(jnp.sum(result_10k)):.6f}\")\n",
+    "print(f\"  Total portfolio weight     : {float(jnp.sum(result_100k)):.6f}\")\n",
     "print(\n",
-    "    f\"  Expected return            : {float(jnp.sum(expected_returns * result_10k)):.6f}\"\n",
+    "    f\"  Expected return            : {float(jnp.sum(expected_returns * result_100k)):.6f}\"\n",
     ")\n",
     "print(\n",
-    "    f\"  Portfolio variance         : {float(jnp.sum(volatilities**2 * result_10k**2)):.6f}\"\n",
+    "    f\"  Portfolio variance         : {float(jnp.sum(volatilities**2 * result_100k**2)):.6f}\"\n",
     ")\n",
     "\n",
     "# ---- Visualise -------------------------------------------------------------\n",
