Attempt to speed up solver

--- a/benchmark_cpu_gpu.ipynb
+++ b/benchmark_cpu_gpu.ipynb
@@ -9,7 +9,7 @@
     "This notebook benchmarks the [slsqp-jax](https://github.com/lucianopaz/slsqp-jax) constrained optimizer across problem sizes to compare **CPU** and **GPU** execution times.\n",
     "\n",
     "We solve constrained quadratic problems at dimensions **n = 5, 20, 100, 500** and\n",
-    "report wall-clock times for both devices. Finally, we tackle a **10,000-dimensional constrained portfolio allocation** on GPU to demonstrate\n",
+    "report wall-clock times for both devices. Finally, we tackle a **100,000-dimensional constrained portfolio allocation** on GPU to demonstrate\n",
     "large-scale capability.\n",
     "\n",
     "> **Requirements** — Run this notebook on Google Colab with a **GPU runtime**.\\\n",
@@ -456,10 +456,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Large-Scale: 10,000-Dimensional Portfolio Allocation\n",
+    "## Large-Scale: 100,000-Dimensional Portfolio Allocation\n",
     "\n",
-    "We now solve a constrained optimization problem with **n = 10,000** decision\n",
-    "variables, modelling a simplified portfolio allocation over a universe of assets.\n",
+    "We now solve a constrained optimization problem with **n = 100,000** decision variables, modelling a simplified portfolio allocation over a universe of assets.\n",
     "\n",
     "| Component | Formula |\n",
     "|---|---|\n",
@@ -471,10 +470,7 @@
     "- $\\mu_i \\in [0.01, 0.15]$ : expected return (random)\n",
     "- Each asset is randomly assigned to one of 20 sectors.\n",
     "\n",
-    "This gives **10,001 decision-variable dimensions** with only\n",
-    "**21 constraints** (1 equality + 20 inequality), which keeps the QP\n",
-    "subproblem's active-set projection fast ($21 \\times 21$ system) while\n",
-    "exercising the L-BFGS Hessian and projected CG at scale."
+    "This gives **10,001 decision-variable dimensions** with only **21 constraints** (1 equality + 20 inequality), which keeps the QP subproblem's active-set projection fast ($21 \\times 21$ system) while exercising the L-BFGS Hessian and projected CG at scale."
    ]
   },
   {
