--- a/benchmark_cpu_gpu.ipynb
+++ b/benchmark_cpu_gpu.ipynb
@@ -6,11 +6,10 @@
    "source": [
     "# SLSQP-JAX: CPU vs GPU Benchmark\n",
     "\n",
-    "This notebook benchmarks the [slsqp-jax](https://github.com/lucianopaz/slsqp-jax) constrained optimizer across problem sizes to compare **CPU** and **GPU** execution times.\n",
+    "This notebook benchmarks the [slsqp-jax](https://github.com/lucianopaz/slsqp-jax) constrained optimizer across problem sizes to compare **JAX CPU**, **JAX GPU**, and **SciPy** execution times.\n",
     "\n",
-    "We solve constrained quadratic problems at dimensions **n = 5, 20, 100, 500** and\n",
-    "report wall-clock times for both devices. Finally, we tackle a **100,000-dimensional constrained portfolio allocation** on GPU to demonstrate\n",
-    "large-scale capability.\n",
+    "We solve constrained quadratic problems at dimensions **n = 5, 20, 100, 500, 1000** and\n",
+    "report wall-clock times for all backends. Finally, we tackle a **100,000-dimensional constrained portfolio allocation** on both CPU and GPU to demonstrate large-scale capability.\n",
     "\n",
     "> **Requirements** — Run this notebook on Google Colab with a **GPU runtime**.\\\n",
     "> Go to **Runtime → Change runtime type → T4 GPU** (or better)."
@@ -225,7 +224,7 @@
    "outputs": [],
    "source": [
     "# ---- Run benchmarks --------------------------------------------------------\n",
-    "problem_sizes = [5, 20, 100, 500]\n",
+    "problem_sizes = [5, 20, 100, 500, 1000]\n",
     "n_loops = 10\n",
     "\n",
     "all_results = {}\n",
@@ -335,28 +334,33 @@
    "source": [
     "# ---- Summary table ---------------------------------------------------------\n",
     "print()\n",
-    "print(\"=\" * 90)\n",
+    "print(\"=\" * 110)\n",
     "print(\" BENCHMARK SUMMARY\")\n",
-    "print(\"=\" * 90)\n",
-    "header = f\"{'n':>6} | {'SciPy (ms)':>12} | {'CPU (ms)':>14} | {'GPU (ms)':>14} | {'Speedup':>10} | {'Match':>6}\"\n",
+    "print(\"=\" * 110)\n",
+    "header = f\"{'n':>6} | {'SciPy (ms)':>12} | {'JAX CPU (ms)':>14} | {'JAX GPU (ms)':>14} | {'CPU vs SciPy':>12} | {'GPU vs SciPy':>12} | {'Match':>6}\"\n",
     "print(header)\n",
-    "print(\"-\" * len(header))\n",
+    "print(\"-\" * 110)\n",
     "\n",
     "for n in problem_sizes:\n",
     "    scipy_ms = all_results[n][\"scipy\"][\"time\"] * 1000\n",
     "    cpu_ms = all_results[n][\"cpu\"][\"avg\"] * 1000\n",
     "    cpu_match = \"✓\" if all_results[n][\"cpu\"][\"match_scipy\"] else \"✗\"\n",
-    "    row = f\"{n:>6} | {scipy_ms:>10.2f} | {cpu_ms:>10.2f} ms\"\n",
+    "\n",
+    "    # Speedup relative to SciPy (>1 means JAX is faster)\n",
+    "    cpu_speedup = all_results[n][\"scipy\"][\"time\"] / all_results[n][\"cpu\"][\"avg\"]\n",
+    "\n",
+    "    row = f\"{n:>6} | {scipy_ms:>10.2f} | {cpu_ms:>12.2f} ms\"\n",
     "    if gpu_available and \"gpu\" in all_results[n]:\n",
     "        gpu_ms = all_results[n][\"gpu\"][\"avg\"] * 1000\n",
-    "        sp = all_results[n][\"cpu\"][\"avg\"] / all_results[n][\"gpu\"][\"avg\"]\n",
+    "        gpu_speedup = all_results[n][\"scipy\"][\"time\"] / all_results[n][\"gpu\"][\"avg\"]\n",
     "        gpu_match = \"✓\" if all_results[n][\"gpu\"][\"match_scipy\"] else \"✗\"\n",
-    "        row += f\" | {gpu_ms:>10.2f} ms | {sp:>8.2f}x | {cpu_match}/{gpu_match}\"\n",
+    "        row += f\" | {gpu_ms:>12.2f} ms | {cpu_speedup:>10.2f}x | {gpu_speedup:>10.2f}x | {cpu_match}/{gpu_match}\"\n",
     "    else:\n",
-    "        row += f\" | {'N/A':>14} | {'N/A':>10} | {cpu_match}\"\n",
+    "        row += f\" | {'N/A':>14} | {cpu_speedup:>10.2f}x | {'N/A':>12} | {cpu_match}\"\n",
     "    print(row)\n",
     "\n",
     "print()\n",
+    "print(\"Speedup: >1 means JAX is faster than SciPy, <1 means SciPy is faster\")\n",
     "print(\"Match column: CPU/GPU vs SciPy reference solution (✓ = match, ✗ = mismatch)\")"
    ]
   },
@@ -370,11 +374,26 @@
     "fig, axes = plt.subplots(1, 2, figsize=(14, 5), layout=\"constrained\")\n",
     "sizes = np.array(problem_sizes)\n",
     "\n",
+    "# Extract timing data\n",
+    "scipy_times = np.array([all_results[n][\"scipy\"][\"time\"] * 1000 for n in problem_sizes])\n",
     "cpu_times = np.array([all_results[n][\"cpu\"][\"avg\"] * 1000 for n in problem_sizes])\n",
     "cpu_stds = np.array([all_results[n][\"cpu\"][\"std\"] * 1000 for n in problem_sizes])\n",
     "\n",
-    "# -- Left panel: execution times --\n",
+    "# -- Left panel: execution times (including SciPy) --\n",
     "ax = axes[0]\n",
+    "\n",
+    "# SciPy reference line\n",
+    "ax.plot(\n",
+    "    sizes,\n",
+    "    scipy_times,\n",
+    "    marker=\"^\",\n",
+    "    linewidth=2,\n",
+    "    markersize=8,\n",
+    "    color=\"#FF5722\",\n",
+    "    label=\"SciPy SLSQP\",\n",
+    ")\n",
+    "\n",
+    "# JAX CPU\n",
     "ax.errorbar(\n",
     "    sizes,\n",
     "    cpu_times,\n",
@@ -383,8 +402,10 @@
     "    capsize=5,\n",
     "    linewidth=2,\n",
     "    markersize=8,\n",
-    "    label=\"CPU\",\n",
+    "    color=\"#2196F3\",\n",
+    "    label=\"JAX CPU\",\n",
     ")\n",
+    "\n",
     "if gpu_available:\n",
     "    gpu_times = np.array([all_results[n][\"gpu\"][\"avg\"] * 1000 for n in problem_sizes])\n",
     "    gpu_stds = np.array([all_results[n][\"gpu\"][\"std\"] * 1000 for n in problem_sizes])\n",
@@ -396,12 +417,13 @@
     "        capsize=5,\n",
     "        linewidth=2,\n",
     "        markersize=8,\n",
-    "        label=\"GPU\",\n",
+    "        color=\"#4CAF50\",\n",
+    "        label=\"JAX GPU\",\n",
     "    )\n",
     "\n",
     "ax.set_xlabel(\"Problem dimension (n)\", fontsize=12)\n",
     "ax.set_ylabel(\"Execution time (ms)\", fontsize=12)\n",
-    "ax.set_title(\"SLSQP-JAX: CPU vs GPU Execution Time\", fontsize=13)\n",
+    "ax.set_title(\"SLSQP Execution Time: JAX vs SciPy\", fontsize=13)\n",
     "ax.legend(fontsize=11)\n",
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")\n",
@@ -409,45 +431,78 @@
     "ax.set_xticks(problem_sizes)\n",
     "ax.set_xticklabels(problem_sizes)\n",
     "\n",
-    "# -- Right panel: speedup --\n",
+    "# -- Right panel: speedup relative to SciPy --\n",
     "ax = axes[1]\n",
+    "\n",
+    "# Speedups relative to SciPy (>1 means JAX is faster)\n",
+    "cpu_speedups = scipy_times / cpu_times\n",
+    "\n",
+    "x_positions = np.arange(len(sizes))\n",
+    "bar_width = 0.35\n",
+    "\n",
+    "# JAX CPU bars\n",
+    "cpu_bars = ax.bar(\n",
+    "    x_positions - bar_width / 2,\n",
+    "    cpu_speedups,\n",
+    "    bar_width,\n",
+    "    color=\"#2196F3\",\n",
+    "    alpha=0.8,\n",
+    "    edgecolor=\"#1565C0\",\n",
+    "    label=\"JAX CPU\",\n",
+    ")\n",
+    "\n",
     "if gpu_available:\n",
-    "    speedups = cpu_times / gpu_times\n",
-    "    bars = ax.bar(\n",
-    "        range(len(sizes)),\n",
-    "        speedups,\n",
-    "        tick_label=[str(s) for s in sizes],\n",
-    "        color=\"#2196F3\",\n",
+    "    gpu_speedups = scipy_times / gpu_times\n",
+    "    # JAX GPU bars\n",
+    "    gpu_bars = ax.bar(\n",
+    "        x_positions + bar_width / 2,\n",
+    "        gpu_speedups,\n",
+    "        bar_width,\n",
+    "        color=\"#4CAF50\",\n",
     "        alpha=0.8,\n",
-    "        edgecolor=\"#1565C0\",\n",
+    "        edgecolor=\"#388E3C\",\n",
+    "        label=\"JAX GPU\",\n",
     "    )\n",
-    "    ax.axhline(y=1.0, color=\"red\", linestyle=\"--\", alpha=0.7, label=\"Break-even\")\n",
-    "    ax.set_ylabel(\"Speedup (CPU / GPU)\", fontsize=12)\n",
-    "    ax.set_title(\"GPU Speedup Factor\", fontsize=13)\n",
-    "    ax.legend(fontsize=11)\n",
-    "    ax.grid(True, alpha=0.3, axis=\"y\")\n",
-    "    # Annotate bars\n",
-    "    for bar, sp in zip(bars, speedups):\n",
+    "\n",
+    "ax.axhline(\n",
+    "    y=1.0, color=\"red\", linestyle=\"--\", linewidth=1.5, alpha=0.7, label=\"SciPy baseline\"\n",
+    ")\n",
+    "ax.set_ylabel(\"Speedup vs SciPy\", fontsize=12)\n",
+    "ax.set_xlabel(\"Problem dimension (n)\", fontsize=12)\n",
+    "ax.set_title(\"JAX Speedup Relative to SciPy\", fontsize=13)\n",
+    "ax.set_xticks(x_positions)\n",
+    "ax.set_xticklabels([str(s) for s in sizes])\n",
+    "ax.legend(fontsize=10)\n",
+    "ax.grid(True, alpha=0.3, axis=\"y\")\n",
+    "\n",
+    "# Annotate CPU bars\n",
+    "for bar, sp in zip(cpu_bars, cpu_speedups):\n",
+    "    y_pos = bar.get_height()\n",
+    "    ax.text(\n",
+    "        bar.get_x() + bar.get_width() / 2,\n",
+    "        y_pos + 0.02,\n",
+    "        f\"{sp:.1f}x\",\n",
+    "        ha=\"center\",\n",
+    "        va=\"bottom\",\n",
+    "        fontsize=9,\n",
+    "        fontweight=\"bold\",\n",
+    "        color=\"#1565C0\",\n",
+    "    )\n",
+    "\n",
+    "# Annotate GPU bars\n",
+    "if gpu_available:\n",
+    "    for bar, sp in zip(gpu_bars, gpu_speedups):\n",
+    "        y_pos = bar.get_height()\n",
     "        ax.text(\n",
     "            bar.get_x() + bar.get_width() / 2,\n",
-    "            bar.get_height() + 0.05,\n",
-    "            f\"{sp:.2f}x\",\n",
+    "            y_pos + 0.02,\n",
+    "            f\"{sp:.1f}x\",\n",
     "            ha=\"center\",\n",
     "            va=\"bottom\",\n",
-    "            fontsize=11,\n",
+    "            fontsize=9,\n",
     "            fontweight=\"bold\",\n",
+    "            color=\"#388E3C\",\n",
     "        )\n",
-    "else:\n",
-    "    ax.text(\n",
-    "        0.5,\n",
-    "        0.5,\n",
-    "        \"No GPU available\",\n",
-    "        ha=\"center\",\n",
-    "        va=\"center\",\n",
-    "        fontsize=14,\n",
-    "        transform=ax.transAxes,\n",
-    "    )\n",
-    "ax.set_xlabel(\"Problem dimension (n)\", fontsize=12)\n",
     "\n",
     "plt.show()"
    ]
@@ -470,7 +525,9 @@
     "- $\\mu_i \\in [0.01, 0.15]$ : expected return (random)\n",
     "- Each asset is randomly assigned to one of 20 sectors.\n",
     "\n",
-    "This gives **10,001 decision-variable dimensions** with only **21 constraints** (1 equality + 20 inequality), which keeps the QP subproblem's active-set projection fast ($21 \\times 21$ system) while exercising the L-BFGS Hessian and projected CG at scale."
+    "This gives **100,000 decision-variable dimensions** with only **21 constraints** (1 equality + 20 inequality), which keeps the QP subproblem's active-set projection fast ($21 \\times 21$ system) while exercising the L-BFGS Hessian and projected CG at scale.\n",
+    "\n",
+    "We benchmark this problem on **both CPU and GPU** to compare runtimes at large scale, where GPU parallelism should provide significant speedup."
    ]
   },
   {
@@ -535,10 +592,6 @@
     "print(f\"  Inequality constraints  : {K_SECTORS}\")\n",
     "print(f\"  Total constraints       : {K_SECTORS + 1}\")\n",
     "\n",
-    "target_device = gpu_device if gpu_available else cpu_device\n",
-    "device_name = \"GPU\" if gpu_available else \"CPU\"\n",
-    "print(f\"  Target device           : {device_name}\")\n",
-    "\n",
     "\n",
     "@jax.jit\n",
     "def solve_100k(x0):\n",
@@ -553,29 +606,84 @@
     "    return sol.value\n",
     "\n",
     "\n",
-    "x0_dev = jax.device_put(x0_100k, target_device)\n",
-    "\n",
-    "# Compile\n",
-    "print(\"\\nCompiling (this may take a minute or two) ...\")\n",
-    "t0 = time.perf_counter()\n",
-    "result_100k = solve_100k(x0_dev)\n",
-    "result_100k.block_until_ready()\n",
-    "compile_time = time.perf_counter() - t0\n",
-    "print(f\"Compilation time: {compile_time:.1f} s\")\n",
-    "\n",
-    "# Timed runs\n",
     "n_runs = 5\n",
-    "print(f\"\\nRunning {n_runs} timed solves ...\")\n",
-    "times_100k = []\n",
+    "results_100k = {}\n",
+    "\n",
+    "# --- CPU benchmark ---\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\" CPU BENCHMARK\")\n",
+    "print(\"=\" * 60)\n",
+    "x0_cpu = jax.device_put(x0_100k, cpu_device)\n",
+    "\n",
+    "print(\"Compiling for CPU (this may take a minute or two) ...\")\n",
+    "t0 = time.perf_counter()\n",
+    "result_cpu = solve_100k(x0_cpu)\n",
+    "result_cpu.block_until_ready()\n",
+    "cpu_compile_time = time.perf_counter() - t0\n",
+    "print(f\"CPU compilation time: {cpu_compile_time:.1f} s\")\n",
+    "\n",
+    "print(f\"\\nRunning {n_runs} timed solves on CPU ...\")\n",
+    "cpu_times = []\n",
     "for _ in range(n_runs):\n",
     "    t0 = time.perf_counter()\n",
-    "    result_100k = solve_100k(x0_dev)\n",
-    "    result_100k.block_until_ready()\n",
-    "    times_100k.append(time.perf_counter() - t0)\n",
+    "    result_cpu = solve_100k(x0_cpu)\n",
+    "    result_cpu.block_until_ready()\n",
+    "    cpu_times.append(time.perf_counter() - t0)\n",
     "\n",
-    "avg_100k = np.mean(times_100k)\n",
-    "std_100k = np.std(times_100k)\n",
-    "print(f\"Average solve time ({device_name}): {avg_100k:.2f} \\u00b1 {std_100k:.2f} s\")"
+    "cpu_avg = np.mean(cpu_times)\n",
+    "cpu_std = np.std(cpu_times)\n",
+    "print(f\"Average solve time (CPU): {cpu_avg:.2f} ± {cpu_std:.2f} s\")\n",
+    "results_100k[\"cpu\"] = {\"avg\": cpu_avg, \"std\": cpu_std, \"sol\": result_cpu}\n",
+    "\n",
+    "# --- GPU benchmark ---\n",
+    "if gpu_available:\n",
+    "    print(\"\\n\" + \"=\" * 60)\n",
+    "    print(\" GPU BENCHMARK\")\n",
+    "    print(\"=\" * 60)\n",
+    "    x0_gpu = jax.device_put(x0_100k, gpu_device)\n",
+    "\n",
+    "    print(\"Compiling for GPU (this may take a minute or two) ...\")\n",
+    "    t0 = time.perf_counter()\n",
+    "    result_gpu = solve_100k(x0_gpu)\n",
+    "    result_gpu.block_until_ready()\n",
+    "    gpu_compile_time = time.perf_counter() - t0\n",
+    "    print(f\"GPU compilation time: {gpu_compile_time:.1f} s\")\n",
+    "\n",
+    "    print(f\"\\nRunning {n_runs} timed solves on GPU ...\")\n",
+    "    gpu_times = []\n",
+    "    for _ in range(n_runs):\n",
+    "        t0 = time.perf_counter()\n",
+    "        result_gpu = solve_100k(x0_gpu)\n",
+    "        result_gpu.block_until_ready()\n",
+    "        gpu_times.append(time.perf_counter() - t0)\n",
+    "\n",
+    "    gpu_avg = np.mean(gpu_times)\n",
+    "    gpu_std = np.std(gpu_times)\n",
+    "    print(f\"Average solve time (GPU): {gpu_avg:.2f} ± {gpu_std:.2f} s\")\n",
+    "    results_100k[\"gpu\"] = {\"avg\": gpu_avg, \"std\": gpu_std, \"sol\": result_gpu}\n",
+    "\n",
+    "    # Use GPU result for analysis (more accurate on GPU)\n",
+    "    result_100k = result_gpu\n",
+    "else:\n",
+    "    result_100k = result_cpu\n",
+    "\n",
+    "# --- Summary comparison ---\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\" 100K PORTFOLIO: CPU vs GPU COMPARISON\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"\\n{'Device':<10} | {'Avg Time (s)':<14} | {'Std (s)':<10}\")\n",
+    "print(\"-\" * 40)\n",
+    "print(f\"{'CPU':<10} | {cpu_avg:<14.2f} | {cpu_std:<10.2f}\")\n",
+    "if gpu_available:\n",
+    "    print(f\"{'GPU':<10} | {gpu_avg:<14.2f} | {gpu_std:<10.2f}\")\n",
+    "    speedup = cpu_avg / gpu_avg\n",
+    "    print(f\"\\n🚀 GPU Speedup: {speedup:.1f}x faster than CPU\")\n",
+    "else:\n",
+    "    print(\"\\n(GPU not available)\")\n",
+    "\n",
+    "# Store the average for compatibility with later cells\n",
+    "avg_100k = gpu_avg if gpu_available else cpu_avg\n",
+    "std_100k = gpu_std if gpu_available else cpu_std"
    ]
   },
   {
@@ -584,7 +692,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---- Analyse the 10 K solution ---------------------------------------------\n",
+    "# ---- Analyse the 100K solution ---------------------------------------------\n",
     "x_opt = np.asarray(result_100k)\n",
     "\n",
     "obj_val = float(portfolio_objective(result_100k, None)[0])\n",
@@ -596,7 +704,7 @@
     "n_active = int(np.sum(x_opt > 1e-6))\n",
     "\n",
     "print(f\"{'=' * 60}\")\n",
-    "print(f\"{'10 K PORTFOLIO OPTIMISATION RESULTS':^60}\")\n",
+    "print(f\"{'100K PORTFOLIO OPTIMISATION RESULTS':^60}\")\n",
     "print(f\"{'=' * 60}\")\n",
     "print(f\"  Objective value            : {obj_val:.6f}\")\n",
     "print(f\"  Budget violation |sum-1|   : {budget_viol:.2e}\")\n",
